force-app/main/default/objects/Volunteer_Type__c/Volunteer_Type__c.object-meta.xml
<CustomObject>
    <description>Used for recording types of volunteer a volunteer can do.  I.e. Rover, Companion, Camp Leader, Medical</description>
    <label>Volunteer Type</label>
    <nameField>
        <displayFormat>VT-{0000}</displayFormat>
        <label>Volunteer Type Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Volunteers Type</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>