force-app/main/default/objects/Volunteer_Type__c/fields/temp__c.field-meta.xml
<CustomField>
    <fullName>temp__c</fullName>
    <label>temp</label>
    <length>100</length>
    <type>Text</type>
</CustomField>