force-app/main/default/objects/Volunteer_Type__c/fields/voltypeid__c.field-meta.xml
<CustomField>
    <fullName>voltypeid__c</fullName>
    <externalId>true</externalId>
    <label>voltypeid</label>
    <length>255</length>
    <type>Text</type>
    <unique>true</unique>
</CustomField>