force-app/main/default/objects/Volunteer_Type__c/fields/Volunteer__c.field-meta.xml
<CustomField>
    <fullName>Volunteer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Volunteer</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>Volunteers Type</relationshipLabel>
    <relationshipName>Volunteers_Type</relationshipName>
    <type>Lookup</type>
</CustomField>