force-app/main/default/objects/Volunteer_Type__c/fields/Volunteer_Compliance_Missing__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Compliance_Missing__c</fullName>
    <label>Volunteer Compliance Missing</label>
    <type>MultiselectPicklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Eligibility</valueSetName>
    </valueSet>
</CustomField>