force-app/main/default/objects/Volunteer_Type__c/fields/Volunteer_Status__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Status__c</fullName>
    <label>Status</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Assigned</fullName>
            </value>
            <value>
                <fullName>Active</fullName>
            </value>
            <value>
                <fullName>Pending</fullName>
            </value>
            <value>
                <fullName>Inactive</fullName>
                <label>Former</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>