force-app/main/default/objects/Volunteer_Type__c/fields/Volunteer_Type__c.field-meta.xml
<CustomField>
    <fullName>Volunteer_Type__c</fullName>
    <label>Volunteer Type</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Volunteer_Types</valueSetName>
    </valueSet>
</CustomField>