force-app/main/default/objects/Volunteer_Type__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Volunteer_Status__c</columns>
    <columns>Volunteer__c</columns>
    <columns>Volunteer_Type__c</columns>
    <columns>Start_Date__c</columns>
    <columns>End_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>